# eve

./: Makefile  build.sh  kernel-version.mk
conf/: installer11.json
images/: rootfs.yml.in
pkg/alpine/: Dockerfile  eve-alpine-deploy.sh
pkg/alpine-base/: Dockerfile
pkg/alpine/mirrors/3.13/: main
pkg/eve/: Dockerfile.in
pkg/eve/installer/: grub.cfg
pkg/grub/patches/: 0010-Implement-watchdog-style-menu-timeout.patch
pkg/installer/: .gitignore  Cargo.toml  Dockerfile  build.yml  installer.sh  run-console.sh  run-installer.sh  rust-toolchain.toml
pkg/installer/patch/cursive/: 0001-Make-cursive-working-on-EVE.patch
pkg/installer/src/: main.rs
pkg/installer/src/linux/: block.rs  mod.rs  musl.rs
pkg/installer/src/test/: mod.rs
pkg/measure-config/: go.mod  go.sum
pkg/measure-config/src/: measurefs.go
pkg/mkimage-raw-efi/: Dockerfile  config.json  initramfs-init.patch  make-raw  runtime.json
pkg/pillar/hypervisor/: kvm.go  kvm_test.go
pkg/pillar/types/: ifnametopci.go
pkg/storage-init/: build.yml
tools/: parse-pkgs.sh
