[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap="3.1.0"
gptman={git = "https://github.com/mikem-zed/gptman.git"}
regex="1.5.4"
libc="0.2.118"
sys-mount="1.3.0"