[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap="3.1.0"
gptman={git = "https://github.com/mikem-zed/gptman.git"}
regex="1.5.4"
libc="0.2.118"
lazy_static = "1.4.0"
rand = "0.8.5"
arrayvec = "0.7.2"
tempfile="3.3.0"
tui = { version = "0.17.0", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.23.1", features = [ "serde" ] }
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
[dependencies.cursive]
path = "./cursive/cursive" 
default-features = false
features = ["crossterm-backend"]
